--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.85.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +43,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.16",
+    "html-webpack-plugin": "^5.6.3",
+    "sass": "^1.86.3",
+    "webpack-dev-server": "^5.2.1"
   }
 }
