--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "ahooks": "^3.8.4",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.14.0",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-content-loader": "^7.0.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.8.3",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
