--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "ahooks": "^3.8.4",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "loadable": "^1.0.0",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
+    "react-loadable": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.16",
+    "@types/react-loadable": "^5.5.11",
     "html-webpack-plugin": "^5.6.3",
     "sass": "^1.86.3",
     "webpack-dev-server": "^5.2.1"
